--- a/css/profile.css
+++ b/css/profile.css
@@ -7,3 +7,14 @@
     display: inline-block;
     color: white;
 }
+ul{
+    font-weight:400;
+}
+
+.hide {
+    display: none;
+}
+
+.display_content {
+    display: block;
+}
